# kiwiGL

./: .clang-format  .editorconfig  .gitignore  .justfile  CMakeLists.txt  README.md  index.html  kiwiGL.sln  premake5.lua  shell.nix  web.data  web.js  web.wasm
.github/actions/setup-emscripten-env/: action.yml
.github/workflows/: clang-format.yml  deploy.yml  docs.yml  format.yml
examples/: CMakeLists.txt
examples/bunny/: CMakeLists.txt  bunny.cpp
examples/bunny/src/: bunny.cpp
examples/cube/: CMakeLists.txt  cube.cpp
examples/cube/src/: cube.cpp
examples/f22/: CMakeLists.txt  f22.cpp
examples/f22/src/: f22.cpp
examples/web/: CMakeLists.txt  web.cpp
examples/web/src/: web.cpp
include/: color.hpp  constants.hpp  display.cuh  display.hpp  display.metal  face.hpp  frame_buffer.hpp  kiwigl.hpp  mesh.hpp  texture.hpp  traingle.hpp  triangle.hpp  vector2d.hpp  vector3d.cuh  vector3d.hpp
include/kiwigl/: color.hpp  constants.hpp  display.cuh  display.hpp  face.hpp  frame_buffer.hpp  kiwigl.hpp  mesh.hpp  triangle.hpp  vector.hpp
include/kiwigl/core/: constants.hpp
include/kiwigl/geometry/: face.hpp  mesh.hpp  triangle.hpp  vector.hpp
include/kiwigl/graphics/: color.hpp  display.cuh  display.hpp  display.metal  frame_buffer.hpp
include/kiwigl/texture/: texture.hpp
kiwi/: kiwi.vcxproj  kiwi.vcxproj.filters  main.cpp
kiwi/include/: display.cuh  display.hpp  frame_buffer.hpp  mesh.hpp  triangle.hpp  vector3d.hpp
kiwi/src/: color.cpp  display.cpp  frame_buffer.cpp
public/: index.html  web.data
script/: build-web.sh  web.sh
scripts/: format.sh  web.sh
src/: color.cpp  display.cpp  display.cu  face.cpp  frame_buffer.cpp  main.cpp  mesh.cpp  vector3d.cpp  vector3d.cu
tests/: CMakeLists.txt  test_library.cpp
